coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__transcript__tests__transcript_modal_empty_footer.snap
---
source: app/tui/src/presentation/transcript.test.rs
expression: "render_transcript_text(&app_state, &state, 72, 8)"
---
┌ Transcript ──────────────────────────────────────────────────────────┐
│No messages yet.                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│ctrl+o toggle · ↑/↓ scroll · PgUp/PgDn page · Home/End jump           │
│Tab select · Enter fold · / search · n/N · Esc/q quit                 │
└──────────────────────────────────────────────────────────────────────┘
