coco-rs/app/tui/src/presentation/snapshots/coco_tui__presentation__transcript__tests__transcript_modal_streaming_tail.snap
---
source: app/tui/src/presentation/transcript.test.rs
expression: "render_transcript_text(&app_state, &state, 84, 12)"
---
┌ Transcript ──────────────────────────────────────────────────────────────────────┐
│> summarize status                                                                │
│                                                                                  │
│⏺ Working through the transcript pager changes.                                   │
│▌                                                                                 │
│                                                                                  │
│                                                                                  │
│                                                                                  │
│                                                                                  │
│ctrl+o toggle · ↑/↓ scroll · PgUp/PgDn page · Home/End jump                       │
│Tab select · Enter fold · / search · n/N · Esc/q quit                             │
└──────────────────────────────────────────────────────────────────────────────────┘
